[package]
name = "punt"
description = "A library to connect to the punt STM32 USB bootloader"
repository = "https://github.com/fruchti/punt-rs/"
version = "0.2.0"
authors = ["fruchti <fruchti@gvfr.de>"]
license = "ISC"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.5.1"
crc-any = "2.2.2"
