[package]
name = "punt"
description = "A library to connect to the punt STM32 USB bootloader"
repository = "https://github.com/fruchti/punt-rs/"
version = "0.2.1"
authors = ["fruchti <fruchti@gvfr.de>"]
license = "ISC"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.2"
crc-any = "2.4.3"
